--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Link Manager</title>
+  <title>MyBedroom</title>
   <link rel="stylesheet" href="style.css">
   <style>
     .header {
