--- a/public/index.html
+++ b/public/index.html
@@ -374,7 +374,7 @@
 
     let folders = [];           // Array of folder objects
     let links   = [];           // Array of link objects
-    let currentFolderId = null; // ID of the folder currently open
+    let currentFolderId = null; 
 
     // Modal‐related state (links)
     let pendingDeleteLinkId       = null;
