--- a/public/index.html
+++ b/public/index.html
@@ -373,7 +373,7 @@
     const HIDDEN_FOLDER_NAME  = 'Hidden';
 
     let folders = [];           // Array of folder objects
-    let links   = [];           // Array of link objects
+    let links   = [];           
     let currentFolderId = null; 
 
     // Modal‐related state (links)
