--- a/public/index.html
+++ b/public/index.html
@@ -372,7 +372,7 @@
     const DEFAULT_FOLDER_NAME = 'General';
     const HIDDEN_FOLDER_NAME  = 'Hidden';
 
-    let folders = [];           // Array of folder objects
+    let folders = [];           
     let links   = [];           
     let currentFolderId = null; 
 
