--- a/public/index.html
+++ b/public/index.html
@@ -383,7 +383,7 @@
     let pendingMoveTargetFolderId = null;
 
     // Hidden‐folder password state
-    let passwordMode = ''; // 'setHiddenPrimary', 'verifyHiddenPrimary', 'verifyHiddenSecondary'
+    let passwordMode = ''; 
 
     // Folder deletion: store the to‐be‐deleted folderId
     let pendingDeleteFolderId = null;
