--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>MyBedroom</title>
+
+  <!-- Favicon / Taskbar icons -->
+  <link rel="icon" href="MyBedroom.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="MyBedroom.ico" type="image/x-icon">
+  <link rel="icon" href="MyBedroom.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="MyBedroom.png" type="image/png" sizes="192x192">
+  <link rel="apple-touch-icon" href="MyBedroom.png">
+  <meta name="msapplication-TileColor" content="#121212">
+  <meta name="msapplication-TileImage" content="MyBedroom.png">
+  
   <link rel="stylesheet" href="style.css">
   <style>
     .header {
