--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="/Icon/mybedroom.png" type="image/png" sizes="192x192">
   <link rel="apple-touch-icon" href="/Icon/mybedroom.png">
   <meta name="msapplication-TileColor" content="#121212">
-  <meta name="msapplication-TileImage" content="MyBedroom.png">
+  <meta name="msapplication-TileImage" content="/Icon/mybedroom.png">
   
   <link rel="stylesheet" href="style.css">
   <style>
