--- a/public/index.html
+++ b/public/index.html
@@ -513,11 +513,10 @@
           showPasswordModal('setHiddenPrimary', folderId);
           return;
         }
-        showPasswordModal('verifyHiddenPrimary', folderId);
+X        showPasswordModal('verifyHiddenPrimary', folderId);
         return;
       }
 
-      // Non-hidden: simply open
       openFolder(folderId);
     }
 
