--- a/public/index.html
+++ b/public/index.html
@@ -513,7 +513,7 @@
           showPasswordModal('setHiddenPrimary', folderId);
           return;
         }
-X        showPasswordModal('verifyHiddenPrimary', folderId);
+        showPasswordModal('verifyHiddenPrimary', folderId);
         return;
       }
 
