--- a/public/index.html
+++ b/public/index.html
@@ -282,7 +282,7 @@
         <button onclick="handleFolderPassword()">Save Password</button>
       </div>
       <div class="sectionDivider"></div>
-      <p style="margin-bottom:12px;">Delete this folder and all its links?</p>
+      <p style="margin-bottom:12px;">Delete this folder and all its links permanently?</p>
       <div class="modal-buttons">
         <button onclick="cancelFolderSettings()">Cancel</button>
         <button class="danger" onclick="openFolderDeleteConfirmModal()">Delete Folder</button>
