--- a/public/index.html
+++ b/public/index.html
@@ -185,6 +185,7 @@
     <ul>
       <li id="ctxMove">Move to Folder…</li>
       <li id="ctxColor">Set Color Tag…</li>
+      <li id="ctxShare">Share by Email</li>
       <li id="ctxDelete">Delete Link</li>
     </ul>
   </div>
