--- a/public/index.html
+++ b/public/index.html
@@ -318,7 +318,7 @@
       <label for="newFolderSecondaryPwd">Secondary Password (optional)</label>
       <input type="password" id="newFolderSecondaryPwd" placeholder="Set secondary password">
 
-      <p id="createFolderError" style="color: red; margin-top: 6px;"></p>
+      <p id="createFolderError" style="color: rgb(212, 64, 64); margin-top: 6px;"></p>
       <div class="modal-buttons">
         <button onclick="cancelCreateFolder()">Cancel</button>
         <button onclick="confirmCreateFolder()">Create</button>
