--- a/public/index.html
+++ b/public/index.html
@@ -650,8 +650,7 @@
     };
     ctxDelete.onclick = ()=>{ contextMenu.style.display='none'; openDeleteModal(); };
 
-    // delete-link
-    function openDeleteModal(){ deleteModal.style.display='flex'; }
+x    function openDeleteModal(){ deleteModal.style.display='flex'; }
     function closeDeleteModal(){ deleteModal.style.display='none'; }
     function confirmDelete(){
       if(pendingDeleteLinkId){
